Fix main image on tablet

--- a/BaltimoreNeighborhoods/main.css
+++ b/BaltimoreNeighborhoods/main.css
@@ -253,7 +253,6 @@ p.source {
         position: absolute;
     }
     .intro {
-        padding: 2em 20em;
+        padding: 2em 6em;
     }
 }
-
